# purge-dynamodb-records

./: Cargo.toml  README.md  samconfig.toml  template.yaml
src/: main.rs
