[package]
name = "purge-dynamodb-records"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-smithy-client = { version = "0.49.0", features = ["test-util"] }
lambda_http = "0.6.1"
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.49.0"
aws-types = { version = "0.49.0", features = ["hardcoded-credentials"] }
http = "0.2.8"
